add jvm tuning